# bip39-dice

./: Cargo.toml
src/: checkwords.rs  dice.rs  lib.rs  main.rs
