[package]
name = "bip39-dice"
version = "0.1.0"
authors = ["Trent Nelson <trent@solana.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "0.8.4"
clap = "2.33.0"
openssl = "0.10.26"
rand = "0.7.2"
tiny-bip39 = "0.6.2"
